<resources>
    <string name="app_name">Seen</string>
    <string name="description_symbol_image">아이콘 심볼 마크</string>
    <string name="label_app_title_text">분실물 찾기 서비스</string>
    <string name="label_app_sub_title_text">이웃의 분실물을 검색하고 찾아주세요.</string>
    <string name="button_google_login_text">Google 간편로그인</string>
    <string name="label_profile_setting_text">프로필 설정</string>
    <string name="description_profile_image_add_text">프로필 사진 추가 버튼</string>
    <string name="label_add_profile_guide_message">당신을 대표하는 프로필 이미지를 등록해요</string>
    <string name="label_nickname">닉네임</string>
    <string name="hint_profile_nickname_text">닉네임을 입력해요</string>
    <string name="label_profile_complete_button">시작해요</string>
    <string name="label_home">홈</string>
    <string name="description_add_lost_item_button">분실물 작성 버튼</string>
    <string name="description_lost_detail_image">분실물 상세 사진</string>
    <string name="label_lost_location">분실위치</string>
    <string name="label_lost_description">설명 글</string>
    <string name="label_lost_date">분실 날짜</string>
    <string name="label_start_talk_button">대화해요</string>
    <string name="description_lost_item_bookmark">즐겨찾기</string>
    <string name="label_lost_item_reward">사례금</string>
    <string name="label_lost_item_title">분실물 이름</string>
    <string name="hint_register_item_title">분실물 등록할 제목을 입력해주세요.</string>
    <string name="label_description">설명</string>
    <string name="hint__register_item_description">분실물을 찾을 수 있도록 설명을 남겨주세요.\n자세하게 남기면 좋아요</string>
    <string name="label_location">분실 장소</string>
    <string name="hint_find_location">위치 찾기</string>
    <string name="label_reward_price">₩ 0</string>
    <string name="label_register_item_button">등록해요</string>
    <string name="description_my_location">현재 위치 등록</string>
    <string name="description_register_image">이미지 추가</string>
    <string name="label_register_location_button">위치 등록하기</string>
    <string name="label_location_title">선택한 곳의 장소명을 입력해주세요.</string>
    <string name="hint_location_title">예) 시청 앞 사거리</string>
    <string name="label_location_position_submit_button">장소 등록</string>
    <string name="description_date_calendar">날짜 입력</string>
</resources>