<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="분실물 등록" />

    <TextView
        android:id="@+id/tv_register_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_lost_item_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_register_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_register"
        android:hint="@string/hint_register_item_title"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_item_title" />


    <ImageView
        android:id="@+id/iv_register_item_add_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_register"
        android:contentDescription="@string/description_register_image"
        android:padding="5dp"
        android:src="@drawable/ic_register_photo"
        app:layout_constraintStart_toStartOf="@id/et_register_item_title"
        app:layout_constraintTop_toBottomOf="@id/et_register_item_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_register_photo_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/iv_register_item_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_register_item_add_image"
        app:layout_constraintTop_toTopOf="@id/iv_register_item_add_image"
        tools:listitem="@layout/item_register_photo" />

    <TextView
        android:id="@+id/tv_register_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_register_item_add_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_register_item_description"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_register"
        android:gravity="top"
        android:hint="@string/hint__register_item_description"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_item_description" />

    <TextView
        android:id="@+id/tv_register_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_item_description" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_register_item_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_register"
        android:gravity="top"
        android:hint="@string/hint_find_location"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_item_location" />

    <ImageView
        android:id="@+id/iv_register_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/description_my_location"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@id/et_register_item_location"
        app:layout_constraintEnd_toEndOf="@id/et_register_item_location"
        app:layout_constraintTop_toTopOf="@id/et_register_item_location" />

    <TextView
        android:id="@+id/tv_register_item_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_lost_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_item_location" />


    <EditText
        android:id="@+id/et_register_item_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:background="@drawable/background_register"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_register_item_date"
        app:layout_constraintTop_toBottomOf="@id/tv_register_item_date" />

    <ImageView
        android:id="@+id/iv_register_lost_date_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_calendar_date"
        app:layout_constraintBottom_toBottomOf="@id/et_register_item_date"
        app:layout_constraintEnd_toEndOf="@id/et_register_item_date"
        app:layout_constraintTop_toTopOf="@id/et_register_item_date"
        android:contentDescription="@string/description_date_calendar" />

    <TextView
        android:id="@+id/tv_register_item_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_lost_item_reward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_item_date" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_register_item_reward_price"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_register"
        android:gravity="top"
        android:hint="@string/label_reward_price"
        android:padding="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_item_reward" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_complete_button"
        style="@style/AppButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_register_item_button"
        app:layout_constraintTop_toBottomOf="@id/et_register_item_reward_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>