<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500">

    <TextView
        android:id="@+id/tv_label_profile_setting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/label_profile_setting_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_add_profile_image"
        style="@style/AppRoundedImageMedium"
        app:shapeAppearanceOverlay="@style/AppRoundedImageMedium"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description_profile_image_add_text"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_profile_setting_text" />

    <TextView
        android:id="@+id/tv_add_profile_nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/label_add_profile_guide_message"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_profile_image" />

    <TextView
        android:id="@+id/tv_label_profile_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/label_nickname"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_profile_nickname_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_input_profile_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/hint_profile_nickname_text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_label_profile_nickname"
        app:layout_constraintTop_toBottomOf="@id/tv_label_profile_nickname" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_profile_complete_button"
        android:enabled="false"
        style="@style/AppButtonOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>